feat: 添加测试文件和更新配置

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <link rel="preconnect" href="https://api.startide-design.com" crossorigin />
     <link rel="preconnect" href="https://cdn.startide-design.com" crossorigin />
     
-    <!-- Preload - 预加载关键资源 -->
-    <link rel="preload" href="/src/assets/styles/index.css" as="style" />
+    <!-- Preload - 预加载关键资源 (生产环境由构建工具自动处理) -->
+    <!-- CSS 预加载在开发模式下由 Vite 自动处理 -->
     <link rel="modulepreload" href="/src/main.ts" />
     
     <!-- PWA Meta Tags -->
